--- a/gastronomia.html
+++ b/gastronomia.html
@@ -15,10 +15,10 @@
     
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/gastronomia.html">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css?v=2025111603">
+    <link rel="stylesheet" href="css/styles.css?v=2025111612">
     <link rel="preload" href="images/Fuerteventura.jpeg" as="image" fetchpriority="high">
     <!-- Google Fonts: Inter para texto, Playfair Display para títulos -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Yeseva+One&display=swap" rel="stylesheet">
     <!-- Swiper for galleries/timeline -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" / crossorigin="anonymous" integrity="sha384-tOPXDsn4moKzmRcYpDt8mOcJWxzy89N8dK0oEkxTx90DZYjDdznDQ4IEiH1pcZH5">
     <!-- Font Awesome 6 -->
@@ -39,23 +39,10 @@
     <meta name="twitter:title" content="Gastronomía de Fuerteventura">
     <meta name="twitter:description" content="La mejor cocina tradicional y restaurantes de Fuerteventura.">
     <meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com 'sha256-kU2c+vCorWWnlv+hLjL5NrLFPcpX/gZaumweXNuEAOc='; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001; base-uri 'self'; object-src none; frame-ancestors 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com https://www.google-analytics.com; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' data: https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https: https://unpkg.com https://*.tile.openstreetmap.org; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://www.google-analytics.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:3000 http://localhost:3001 http://localhost:* http://127.0.0.1:* https://api.open-meteo.com https://marine-api.open-meteo.com; base-uri 'self'; object-src 'none'; frame-ancestors 'self';">
     
-    <!-- Structured Data -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "ItemList",
-        "name": "Restaurantes de Fuerteventura",
-        "description": "Guía de gastronomía y restaurantes en Fuerteventura",
-        "url": "https://thisisfuerteventura.netlify.app/gastronomia.html",
-        "numberOfItems": 36,
-        "itemListElement": [{
-            "@type": "Restaurant",
-            "name": "Restaurantes en Fuerteventura"
-        }]
-    }
-    </script>
+    <!-- Structured Data (external to satisfy CSP) -->
+    <script type="application/ld+json" src="data/structured/gastronomia-itemlist.jsonld"></script>
 </head>
 <body class="dark-header">
     <a class="skip-link" href="#main">Saltar al contenido principal</a>
@@ -89,13 +76,13 @@
         </video>
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h2>Gastronomía de Fuerteventura</h2>
+            <h2 class="sand-write" data-sand-write data-sand-step="0.08" data-sand-duration="0.95" data-sand-delay="0.12" data-sand-distribution="ease">Gastronomía de Fuerteventura</h2>
             <p>Sabores auténticos de la isla</p>
         </div>
     </section>
 
     <section class="typical-dishes reveal">
-        <h2>Platos típicos</h2>
+        <h2 class="sand-write" data-sand-write data-sand-step="0.045" data-sand-duration="0.8" data-sand-distribution="accelerate">Platos típicos</h2>
         <div class="dishes-grid">
             <article class="dish-card">
                 <img src="images/gastronomia/queso-majorero.jpg" alt="Queso Majorero" loading="lazy">
@@ -152,7 +139,7 @@
     </section>
 
     <section class="food-routes reveal">
-        <h2>Rutas gastronómicas</h2>
+        <h2 class="sand-write" data-sand-write data-sand-step="0.045" data-sand-duration="0.8" data-sand-distribution="accelerate">Rutas gastronómicas</h2>
         <p>Recorre mercados tradicionales, queserías y restaurantes de kilómetro 0. En el interior, Betancuria y Antigua ofrecen productos artesanos; en la costa, Corralejo y Morro Jable destacan por su pescado fresco.</p>
         <ul>
             <li><strong>Ruta del queso:</strong> visita queserías y degusta variedades de queso majorero con DOP.</li>
@@ -162,7 +149,7 @@
     </section>
 
     <section class="image-gallery reveal">
-        <h2>Galería de sabores</h2>
+        <h2 class="sand-write" data-sand-write data-sand-step="0.045" data-sand-duration="0.8" data-sand-distribution="accelerate">Galería de sabores</h2>
         <div class="gallery-grid">
             <img src="images/gastronomia/galeria-quesos.jpg" alt="Tabla de quesos" loading="lazy">
             <img src="images/gastronomia/mojo-papas.jpg" alt="Mojo y papas" loading="lazy">
@@ -171,14 +158,14 @@
     </section>
 
     <section class="restaurants reveal">
-        <h2>Restaurantes recomendados por zonas</h2>
+        <h2 class="sand-write" data-sand-write data-sand-step="0.045" data-sand-duration="0.8" data-sand-distribution="accelerate">Restaurantes recomendados por zonas</h2>
         <p class="intro-text">Descubre los mejores restaurantes de Fuerteventura organizados por zonas geográficas.</p>
     </section>
 
     <!-- CORRALEJO (Norte) -->
     <section class="tourism-content reveal">
         <div class="container">
-            <h2><i class="fas fa-location-dot"></i> Corralejo - Norte</h2>
+            <h2><i class="fas fa-location-dot"></i> <span class="sand-write" data-sand-write data-sand-step="0.045" data-sand-duration="0.8" data-sand-distribution="accelerate">Corralejo - Norte</span></h2>
             <p class="zone-intro">Amplia oferta gastronómica con restaurantes de pescado fresco, cocina internacional y terrazas con vistas.</p>
             <div class="tourism-grid">
             <article class="tourism-card">
@@ -277,7 +264,7 @@
     <!-- CALETA DE FUSTE (Centro-Este) -->
     <section class="tourism-content reveal">
         <div class="container">
-            <h2><i class="fas fa-location-dot"></i> Caleta de Fuste - Centro-Este</h2>
+            <h2><i class="fas fa-location-dot"></i> <span class="sand-write" data-sand-write data-sand-step="0.045" data-sand-duration="0.8" data-sand-distribution="accelerate">Caleta de Fuste - Centro-Este</span></h2>
             <p class="zone-intro">Zona turística con restaurantes junto al puerto deportivo y paseo marítimo.</p>
             <div class="tourism-grid">
             <article class="tourism-card">
@@ -376,7 +363,7 @@
     <!-- COSTA CALMA / SOTAVENTO (Sur) -->
     <section class="tourism-content reveal">
         <div class="container">
-            <h2><i class="fas fa-location-dot"></i> Costa Calma / Sotavento - Sur</h2>
+            <h2><i class="fas fa-location-dot"></i> <span class="sand-write" data-sand-write data-sand-step="0.045" data-sand-duration="0.8" data-sand-distribution="accelerate">Costa Calma / Sotavento - Sur</span></h2>
             <p class="zone-intro">Restaurantes en zona tranquila con ambiente relajado y cocina internacional.</p>
             <div class="tourism-grid">
             <article class="tourism-card">
@@ -475,7 +462,7 @@
     <!-- MORRO JABLE / JANDÍA (Sur) -->
     <section class="tourism-content reveal">
         <div class="container">
-            <h2><i class="fas fa-location-dot"></i> Morro Jable / Jandía - Sur</h2>
+            <h2><i class="fas fa-location-dot"></i> <span class="sand-write" data-sand-write data-sand-step="0.045" data-sand-duration="0.8" data-sand-distribution="accelerate">Morro Jable / Jandía - Sur</span></h2>
             <p class="zone-intro">Paseo marítimo con gran variedad de restaurantes desde cocina tradicional hasta internacional.</p>
             <div class="tourism-grid">
             <article class="tourism-card">
@@ -574,7 +561,7 @@
     <!-- EL COTILLO (Noroeste) -->
     <section class="tourism-content reveal">
         <div class="container">
-            <h2><i class="fas fa-location-dot"></i> El Cotillo - Noroeste</h2>
+            <h2><i class="fas fa-location-dot"></i> <span class="sand-write" data-sand-write data-sand-step="0.045" data-sand-duration="0.8" data-sand-distribution="accelerate">El Cotillo - Noroeste</span></h2>
             <p class="zone-intro">Pueblo pesquero auténtico con restaurantes de pescado fresco y ambiente local relajado.</p>
             <div class="tourism-grid">
             <article class="tourism-card">
@@ -673,7 +660,7 @@
     <!-- PUERTO DEL ROSARIO (Capital) -->
     <section class="tourism-content reveal">
         <div class="container">
-            <h2><i class="fas fa-location-dot"></i> Puerto del Rosario - Capital</h2>
+            <h2><i class="fas fa-location-dot"></i> <span class="sand-write" data-sand-write data-sand-step="0.045" data-sand-duration="0.8" data-sand-distribution="accelerate">Puerto del Rosario - Capital</span></h2>
             <p class="zone-intro">Variedad gastronómica en la capital con opciones desde tradicionales hasta internacionales.</p>
             <div class="tourism-grid">
             <article class="tourism-card">
@@ -770,7 +757,7 @@
     </section>
 
     <section class="local-products reveal">
-        <h2>Productos locales</h2>
+        <h2 class="sand-write" data-sand-write data-sand-step="0.045" data-sand-duration="0.8" data-sand-distribution="accelerate">Productos locales</h2>
         <div class="products-container">
             <div class="product">
                 <i class="fas fa-cheese"></i>
@@ -862,6 +849,7 @@
     <script src="js/particles.js?v=2025111508" defer></script>
     <script src="js/narrative-scroll.js?v=2025111508" defer></script>
     <script src="js/ambient-sounds.js?v=2025111508" defer></script>
+    <script src="js/sand-write.js?v=2025111611" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
