--- a/noticias.html
+++ b/noticias.html
@@ -17,8 +17,8 @@
     
     <link rel="canonical" href="https://thisisfuerteventura.netlify.app/noticias.html">
     <link rel="manifest" href="manifest.webmanifest">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css?v=2025111603">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Yeseva+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css?v=2025111612">
     <link rel="preload" href="images/Fuerteventura.jpeg" as="image" fetchpriority="high">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" / crossorigin="anonymous" integrity="sha384-tOPXDsn4moKzmRcYpDt8mOcJWxzy89N8dK0oEkxTx90DZYjDdznDQ4IEiH1pcZH5">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" integrity="sha384-t1nt8BQoYMLFN5p42tRAtuAAFQaCQODekUVeKKZrEnEyp4H2R0RHFz0KWpmj7i8g">
@@ -36,45 +36,10 @@
     <meta name="twitter:title" content="Noticias de Fuerteventura 2025">
     <meta name="twitter:description" content="Últimas noticias de Fuerteventura: actualidad local, eventos y turismo.">
     <meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com 'sha256-TBBA/eo1zb4I+x0jeW4pu9ZCZPzbdI3B+ecMkmICZ6M='; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001 http://localhost:* http://127.0.0.1:*; base-uri 'self'; object-src none; frame-ancestors 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com https://www.google-analytics.com; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' data: https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https: https://unpkg.com https://*.tile.openstreetmap.org; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://www.google-analytics.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:3000 http://localhost:3001 http://localhost:* http://127.0.0.1:* https://api.open-meteo.com https://marine-api.open-meteo.com; base-uri 'self'; object-src 'none'; frame-ancestors 'self';">
     
     <!-- Structured Data -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "CollectionPage",
-        "name": "Noticias de Fuerteventura",
-        "description": "Últimas noticias y actualidad de Fuerteventura, Islas Canarias",
-        "url": "https://thisisfuerteventura.netlify.app/noticias.html",
-        "isPartOf": {
-            "@type": "WebSite",
-            "name": "This is Fuerteventura",
-            "url": "https://thisisfuerteventura.netlify.app/"
-        },
-        "about": {
-            "@type": "Place",
-            "name": "Fuerteventura",
-            "containedInPlace": {
-                "@type": "Place",
-                "name": "Islas Canarias"
-            }
-        },
-        "breadcrumb": {
-            "@type": "BreadcrumbList",
-            "itemListElement": [{
-                "@type": "ListItem",
-                "position": 1,
-                "name": "Inicio",
-                "item": "https://thisisfuerteventura.netlify.app/"
-            }, {
-                "@type": "ListItem",
-                "position": 2,
-                "name": "Noticias",
-                "item": "https://thisisfuerteventura.netlify.app/noticias.html"
-            }]
-        }
-    }
-    </script>
+    <script type="application/ld+json" src="data/structured/noticias-collection.jsonld"></script>
 </head>
 <body>
     <a class="skip-link" href="#main">Saltar al contenido principal</a>
@@ -108,7 +73,7 @@
         </video>
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h2>Noticias de Fuerteventura</h2>
+            <h2 class="sand-write" data-sand-write data-sand-step="0.075" data-sand-duration="0.9" data-sand-delay="0.12" data-sand-distribution="ease">Noticias de Fuerteventura</h2>
             <p>Mantente al día con las últimas novedades de la isla</p>
         </div>
     </section>
@@ -146,7 +111,7 @@
     </section>
 
     <section class="newsletter reveal">
-        <h2>Suscríbete a nuestro boletín</h2>
+        <h2 class="sand-write" data-sand-write data-sand-step="0.035" data-sand-duration="0.7" data-sand-distribution="linear" data-sand-shimmer="off">Suscríbete a nuestro boletín</h2>
         <p>Recibe las últimas noticias y ofertas de Fuerteventura directamente en tu correo.</p>
         <form id="newsletter-form">
             <input type="email" id="newsletter-email" name="email" placeholder="Tu correo electrónico" autocomplete="email" required>
@@ -218,6 +183,7 @@
     <script src="js/form-validation.js?v=2025111508" defer></script>
     <script src="js/narrative-scroll.js?v=2025111508" defer></script>
     <script src="js/ambient-sounds.js?v=2025111508" defer></script>
+    <script src="js/sand-write.js?v=2025111611" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
