a11y(forms): add id and name to necessary cookies checkbox to satisfy autofill/lint guidance
- Add id="cookies-necessary" name="cookies-necessary" to disabled required checkbox in cookie modal across pages
- No functional change; improves form field semantics

--- a/noticia.html
+++ b/noticia.html
@@ -147,7 +147,7 @@
 					<div class="cookie-category-header">
 						<h3>Cookies Necesarias</h3>
 						<label class="cookie-toggle">
-							<input type="checkbox" checked disabled>
+							<input type="checkbox" id="cookies-necessary" name="cookies-necessary" checked disabled>
 							<span class="cookie-toggle-slider"></span>
 						</label>
 					</div>
