Chore: Actualizar páginas HTML y deps del server (alojamiento, blog, contacto, gastronomia, index, noticias, playas, quiz, turismo) y package.json/package-lock

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </header>
     <main id="main">
         <section class="hero parallax reveal hero-video">
-      <video autoplay muted loop playsinline preload="metadata" class="hero-bg" poster="images/Fuerteventura.jpeg">
+      <video autoplay muted loop playsinline preload="metadata" class="hero-bg">
         <source src="images/VideoHeader.mp4" type="video/mp4" fetchpriority="high">
         Tu navegador no soporta vídeo.
       </video>
