--- a/gastronomia.html
+++ b/gastronomia.html
@@ -70,7 +70,7 @@
 
     <main id="main">
     <section class="hero gastronomy-hero parallax reveal hero-video">
-        <video autoplay muted loop playsinline preload="metadata" class="hero-bg" poster="images/Fuerteventura.jpeg">
+        <video autoplay muted loop playsinline preload="metadata" class="hero-bg">
             <source src="images/VideoHeader.mp4" type="video/mp4" fetchpriority="high">
             Tu navegador no soporta vídeo.
         </video>
