Feat(blog): Activar sand-write en héroe de blog y cargar sand-write.js en blog y blog-post

--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
       </video>
       <div class="hero-overlay"></div>
       <div class="hero-content">
-        <h2>Blog de Fuerteventura</h2>
+        <h2 class="sand-write" data-sand-write data-sand-step="0.08" data-sand-duration="0.95" data-sand-delay="0.12" data-sand-distribution="ease">Blog de Fuerteventura</h2>
         <p>Rutas, entrevistas y agenda</p>
       </div>
     </section>
@@ -113,6 +113,7 @@
   <script src="js/scroll-animations.js?v=2025111602" defer></script>
   <script src="js/dark-mode.js?v=2025111508" defer></script>
   <script src="js/blog.js?v=2025111508" defer></script>
+  <script src="js/sand-write.js?v=2025111611" defer></script>
   <script src="js/ambient-sounds.js?v=2025111508" defer></script>
 </body>
 </html>
