Feeds: corregir snapshot e inicialización de timeline
- No descartar imágenes http en snapshots (se proxifican en render)
- Añadir ux.js en index y noticias para construir el timeline
- Bump de versiones en content-loader.js y news.js

--- a/noticias.html
+++ b/noticias.html
@@ -171,11 +171,12 @@
     <script src="js/main.js?v=2025111706" defer></script>
     <script src="js/proxy-discovery.js?v=2025111508" defer></script>
     <script src="js/swiper-init.js?v=2025111508" defer></script>
+    <script src="js/ux.js?v=2025111508" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer crossorigin="anonymous" integrity="sha384-Tsl3d5pUAO7a13enIvSsL3O0/95nsthPJiPto5NtLuY8w3+LbZOpr3Fl2MNmrh1E"></script>
     <script src="js/feed-utils.js?v=2025111508" defer></script>
     <script src="js/image-extractor.js?v=2025111508" defer></script>
-    <script src="js/content-loader.js?v=2025111508" defer></script>
-    <script src="js/news.js?v=2025111508" defer></script>
+    <script src="js/content-loader.js?v=2025111801" defer></script>
+    <script src="js/news.js?v=2025111801" defer></script>
     <script src="js/cookies.js?v=2025111508" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer crossorigin="anonymous" integrity="sha384-hPkhOzAEx2ZcJuDkANAhjXmtEnqjkADleTxUbwTTJLmwmhV2F4/u6BOcnVL3xxqs"></script>
     <script src="js/scroll-animations.js?v=2025111602" defer></script>
