--- a/index.html
+++ b/index.html
@@ -339,10 +339,11 @@
     <script src="js/image-extractor.js?v=2025111508" defer></script>
     <script src="js/proxy-discovery.js?v=2025111508" defer></script>
     <script src="js/swiper-init.js?v=2025111508" defer></script>
+    <script src="js/ux.js?v=2025111508" defer></script>
     
     <!-- Scripts principales -->
     <script src="js/main.js?v=2025111706" defer></script>
-    <script src="js/content-loader.js?v=2025111508" defer></script>
+    <script src="js/content-loader.js?v=2025111801" defer></script>
     <script src="js/cookies.js?v=2025111508" defer></script>
     
     <!-- Scripts de UX y funcionalidades -->
