seo(domain): switch canonical, sitemap, robots and JSON-LD to thisisfuerteventura.es
- Update <link rel=canonical> and OG/Twitter URLs across pages to .es
- Point robots.txt Sitemap to https://thisisfuerteventura.es/sitemap.xml
- Update sitemap.xml <loc> entries to .es URLs
- Update structured data JSON-LD URLs (site, org, pages) to .es

Note: Set .es as primary domain in Netlify, and ensure DNS points correctly to Netlify.

--- a/blog-post.html
+++ b/blog-post.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#0f4c81">
   <meta name="description" content="Artículo del blog de Fuerteventura: rutas, entrevistas y eventos.">
   <meta name="robots" content="index, follow, max-image-preview:large">
-  <link rel="canonical" href="https://thisisfuerteventura.netlify.app/blog-post.html">
+  <link rel="canonical" href="https://thisisfuerteventura.es/blog-post.html">
   <link rel="manifest" href="manifest.webmanifest">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Yeseva+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css?v=2025111803">
