--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de Cookies - This is Fuerteventura</title>
-    <link rel="canonical" href="https://thisisfuerteventura.netlify.app/politica-cookies.html">
+    <link rel="canonical" href="https://thisisfuerteventura.es/politica-cookies.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Yeseva+One&display=swap" rel="stylesheet">
