--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#0f4c81">
   <meta name="description" content="Blog de Fuerteventura 2025: rutas secretas, entrevistas y agenda de eventos en la isla. Consejos prácticos para viajar y disfrutar.">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://thisisfuerteventura.netlify.app/blog.html">
+  <link rel="canonical" href="https://thisisfuerteventura.es/blog.html">
   <link rel="manifest" href="manifest.webmanifest">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Yeseva+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css?v=2025111803">
@@ -16,8 +16,8 @@
   <meta property="og:title" content="Blog de Fuerteventura - Rutas, Entrevistas y Eventos">
   <meta property="og:description" content="Artículos frescos sobre Fuerteventura: rutas, entrevistas y agenda.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://thisisfuerteventura.netlify.app/blog.html">
-  <meta property="og:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
+  <meta property="og:url" content="https://thisisfuerteventura.es/blog.html">
+  <meta property="og:image" content="https://thisisfuerteventura.es/images/logo.jpg">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' data: https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https: https://unpkg.com https://*.tile.openstreetmap.org; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://www.google-analytics.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:3000 http://localhost:3001 http://localhost:* http://127.0.0.1:* https://api.open-meteo.com https://marine-api.open-meteo.com https://ingesteer.services-prod.nsvcs.net; base-uri 'self'; object-src 'none'; frame-ancestors 'self'; frame-src 'self' https://www.facebook.com;">
 </head>
 <body>
