--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <link rel="dns-prefetch" href="https://unpkg.com">
     
-    <link rel="canonical" href="https://thisisfuerteventura.netlify.app/">
+    <link rel="canonical" href="https://thisisfuerteventura.es/">
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/styles.css?v=2025111803">
     <link rel="preload" href="images/Fuerteventura.jpeg" as="image" fetchpriority="high">
@@ -34,8 +34,8 @@
     <meta property="og:title" content="This is Fuerteventura - Guía Turística Completa 2025">
     <meta property="og:description" content="Descubre Fuerteventura: mejores playas, hoteles, restaurantes y actividades turísticas. Tu guía completa de las Islas Canarias.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://thisisfuerteventura.netlify.app/">
-    <meta property="og:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
+    <meta property="og:url" content="https://thisisfuerteventura.es/">
+    <meta property="og:image" content="https://thisisfuerteventura.es/images/logo.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="es_ES">
@@ -45,7 +45,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="This is Fuerteventura - Guía Turística Completa 2025">
     <meta name="twitter:description" content="Descubre Fuerteventura: playas, hoteles, restaurantes y actividades imprescindibles.">
-    <meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
+    <meta name="twitter:image" content="https://thisisfuerteventura.es/images/logo.jpg">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' data: https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https: https://unpkg.com https://*.tile.openstreetmap.org; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://www.google-analytics.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:3000 http://localhost:3001 http://localhost:* http://127.0.0.1:* https://api.open-meteo.com https://marine-api.open-meteo.com https://ingesteer.services-prod.nsvcs.net; base-uri 'self'; object-src 'none'; frame-ancestors 'self';">
     <meta name="twitter:site" content="@thisisfuerteventura">
     
