--- a/noticia.html
+++ b/noticia.html
@@ -14,7 +14,7 @@
 	<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
 	<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
 	
-	<link rel="canonical" href="https://thisisfuerteventura.netlify.app/noticia.html">
+	<link rel="canonical" href="https://thisisfuerteventura.es/noticia.html">
 	<link rel="manifest" href="manifest.webmanifest">
 	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Yeseva+One&display=swap" rel="stylesheet">
 	    <link rel="stylesheet" href="css/styles.css?v=2025111803">
@@ -29,7 +29,7 @@
 	
 	<!-- Twitter Cards - Serán actualizados dinámicamente por JS -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
+	<meta name="twitter:image" content="https://thisisfuerteventura.es/images/logo.jpg">
 	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' data: https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https: https://unpkg.com https://*.tile.openstreetmap.org; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://www.google-analytics.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:3000 http://localhost:3001 http://localhost:* http://127.0.0.1:* https://api.open-meteo.com https://marine-api.open-meteo.com https://ingesteer.services-prod.nsvcs.net; base-uri 'self'; object-src 'none'; frame-ancestors 'self';">
 </head>
 <body class="article-page">
