--- a/quiz.html
+++ b/quiz.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#0f4c81">
   <meta name="description" content="Quiz de Fuerteventura: responde preguntas sobre la isla y consigue una insignia digital descargable.">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://thisisfuerteventura.netlify.app/quiz.html">
+  <link rel="canonical" href="https://thisisfuerteventura.es/quiz.html">
   <link rel="manifest" href="manifest.webmanifest">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Yeseva+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css?v=2025111803">
