--- a/turismo-detalle.html
+++ b/turismo-detalle.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detalle de lugar | This is Fuerteventura</title>
   <meta name="theme-color" content="#0f4c81">
-  <link rel="canonical" href="https://thisisfuerteventura.netlify.app/turismo-detalle.html">
+  <link rel="canonical" href="https://thisisfuerteventura.es/turismo-detalle.html">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/styles.css?v=2025111803">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Yeseva+One&display=swap" rel="stylesheet">
@@ -16,12 +16,12 @@
   <meta property="og:title" content="Descubre Fuerteventura - Detalle de lugar">
   <meta property="og:description" content="Información completa de un lugar de interés, imágenes y mapa.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://thisisfuerteventura.netlify.app/turismo-detalle.html">
-  <meta property="og:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
+  <meta property="og:url" content="https://thisisfuerteventura.es/turismo-detalle.html">
+  <meta property="og:image" content="https://thisisfuerteventura.es/images/logo.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Detalle de lugar - This is Fuerteventura">
   <meta name="twitter:description" content="Información completa de un lugar de interés, imágenes y mapa.">
-  <meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
+  <meta name="twitter:image" content="https://thisisfuerteventura.es/images/logo.jpg">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' data: https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https: https://unpkg.com https://*.tile.openstreetmap.org; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://www.google-analytics.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:3000 http://localhost:3001 http://localhost:* http://127.0.0.1:* https://api.open-meteo.com https://marine-api.open-meteo.com https://ingesteer.services-prod.nsvcs.net; base-uri 'self'; object-src 'none'; frame-ancestors 'self';">
 </head>
 <body class="dark-header">
