feat(featured): aggregate top viewed site content and most clicked news articles
- Add data-track-id attributes to turismo cards for engagement tracking
- Track turismo detail views and store metadata
- Extend content-loader featured logic to merge site content views + article clicks
- Add click tracking to news and turismo for personalized destacados

--- a/turismo.html
+++ b/turismo.html
@@ -96,7 +96,7 @@
                         <span><i class="fas fa-mountain"></i> Dunas</span>
                         <span><i class="fas fa-road"></i> Fácil acceso</span>
                     </div>
-                    <a href="turismo-detalle.html?id=parque-natural-de-corralejo" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=parque-natural-de-corralejo" class="btn" data-track-id="turismo_parque-natural-de-corralejo" data-title="Parque Natural de Corralejo" data-image="images/turismo/corralejo-dunas.jpg?v=2">Más información</a>
                 </div>
             </article>
 
@@ -110,7 +110,7 @@
                         <span><i class="fas fa-building-columns"></i> Museo</span>
                         <span><i class="fas fa-binoculars"></i> Mirador</span>
                     </div>
-                    <a href="turismo-detalle.html?id=betancuria" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=betancuria" class="btn" data-track-id="turismo_betancuria" data-title="Betancuria" data-image="images/turismo/betancuria.jpg?v=2">Más información</a>
                 </div>
             </article>
 
@@ -124,7 +124,7 @@
                         <span><i class="fas fa-compass"></i> Faro</span>
                         <span><i class="fas fa-person-walking"></i> Paseo marítimo</span>
                     </div>
-                    <a href="turismo-detalle.html?id=faro-de-morro-jable" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=faro-de-morro-jable" class="btn" data-track-id="turismo_faro-de-morro-jable" data-title="Faro de Morro Jable" data-image="images/turismo/faro-morro-jable.jpg?v=2">Más información</a>
                 </div>
             </article>
 
@@ -138,7 +138,7 @@
                         <span><i class="fas fa-water"></i> Snorkel</span>
                         <span><i class="fas fa-ticket-simple"></i> Reserva</span>
                     </div>
-                    <a href="turismo-detalle.html?id=isla-de-lobos" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=isla-de-lobos" class="btn" data-track-id="turismo_isla-de-lobos" data-title="Isla de Lobos" data-image="images/turismo/isla-de-lobos.jpg?v=2">Más información</a>
                 </div></article>
 
             <article class="tourism-card">
@@ -149,7 +149,7 @@
                     <div class="features">
                         <span><i class="fas fa-fish"></i> Pescado fresco</span>
                     </div>
-                    <a href="turismo-detalle.html?id=el-cotillo" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=el-cotillo" class="btn" data-track-id="turismo_el-cotillo" data-title="El Cotillo" data-image="images/turismo/el-cotillo.avif">Más información</a>
                 </div></article>
 
             <article class="tourism-card">
@@ -162,7 +162,7 @@
                         <span><i class="fas fa-camera-retro"></i> Fotografía</span>
                         <span><i class="fas fa-car"></i> 4x4 recomendado</span>
                     </div>
-                    <a href="turismo-detalle.html?id=playa-de-cofete" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=playa-de-cofete" class="btn" data-track-id="turismo_playa-de-cofete" data-title="Playa de Cofete" data-image="images/turismo/cofete.jpg">Más información</a>
                 </div>
             </article>
 
@@ -176,7 +176,7 @@
                         <span><i class="fas fa-water"></i> Cuevas marinas</span>
                         <span><i class="fas fa-person-walking"></i> Sendero</span>
                     </div>
-                    <a href="turismo-detalle.html?id=cuevas-de-ajuy" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=cuevas-de-ajuy" class="btn" data-track-id="turismo_cuevas-de-ajuy" data-title="Cuevas de Ajuy" data-image="images/turismo/ajuy.webp">Más información</a>
                 </div>
             </article>
 
@@ -190,7 +190,7 @@
                         <span><i class="fas fa-home"></i> Arquitectura</span>
                         <span><i class="fas fa-palette"></i> Centro de arte</span>
                     </div>
-                    <a href="turismo-detalle.html?id=la-oliva" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=la-oliva" class="btn" data-track-id="turismo_la-oliva" data-title="La Oliva" data-image="images/turismo/la-oliva.avif">Más información</a>
                 </div></article>
 
             <article class="tourism-card">
@@ -201,7 +201,7 @@
                     <div class="features">
                         <span><i class="fas fa-eye"></i> Vistas panorámicas</span>
                     </div>
-                    <a href="turismo-detalle.html?id=mirador-de-morro-velosa" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=mirador-de-morro-velosa" class="btn" data-track-id="turismo_mirador-de-morro-velosa" data-title="Mirador de Morro Velosa" data-image="images/turismo/mirador-morro-velosa.jpg">Más información</a>
                 </div>
             </article>
 
@@ -213,7 +213,7 @@
                     <div class="features">
                         <span><i class="fas fa-child"></i> Familiar</span>
                     </div>
-                    <a href="turismo-detalle.html?id=caleta-de-fuste" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=caleta-de-fuste" class="btn" data-track-id="turismo_caleta-de-fuste" data-title="Caleta de Fuste" data-image="images/turismo/caleta-de-Fuste.jpg">Más información</a>
                 </div>
             </article>
 
@@ -225,7 +225,7 @@
                     <div class="features">
                         <span><i class="fas fa-paintbrush"></i> Arte urbano</span>
                     </div>
-                    <a href="turismo-detalle.html?id=puerto-del-rosario" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=puerto-del-rosario" class="btn" data-track-id="turismo_puerto-del-rosario" data-title="Puerto del Rosario" data-image="images/turismo/puerto-del-rosario-.jpg">Más información</a>
                 </div>
             </article>
 
@@ -237,7 +237,7 @@
                     <div class="features">
                         <span><i class="fas fa-history"></i> Arqueología</span>
                     </div>
-                    <a href="turismo-detalle.html?id=montana-de-tindaya" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=montana-de-tindaya" class="btn" data-track-id="turismo_montana-de-tindaya" data-title="Montaña de Tindaya" data-image="images/turismo/tindaya.webp">Más información</a>
                 </div>
             </article>
 
@@ -249,7 +249,7 @@
                     <div class="features">
                         <span><i class="fas fa-leaf"></i> Naturaleza</span>
                     </div>
-                    <a href="turismo-detalle.html?id=parque-natural-de-jandia" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=parque-natural-de-jandia" class="btn" data-track-id="turismo_parque-natural-de-jandia" data-title="Parque Natural de Jandía" data-image="images/turismo/parque-natural-jandia.jpg">Más información</a>
                 </div>
             </article>
 
@@ -261,7 +261,7 @@
                     <div class="features">
                         <span><i class="fas fa-home"></i> Arquitectura tradicional</span>
                     </div>
-                    <a href="turismo-detalle.html?id=ecomuseo-la-alcogida" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=ecomuseo-la-alcogida" class="btn" data-track-id="turismo_ecomuseo-la-alcogida" data-title="Ecomuseo La Alcogida" data-image="images/turismo/ecomuseo-la-alcogida.jpg">Más información</a>
                 </div>
             </article>
 
@@ -273,7 +273,7 @@
                     <div class="features">
                         <span><i class="fas fa-wind"></i> Molino</span>
                     </div>
-                    <a href="turismo-detalle.html?id=molino-de-antigua" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=molino-de-antigua" class="btn" data-track-id="turismo_molino-de-antigua" data-title="Molino de Antigua" data-image="images/turismo/molino-antigua.jpg">Más información</a>
                 </div>
             </article>
 
@@ -285,7 +285,7 @@
                     <div class="features">
                         <span><i class="fas fa-star"></i> Fenómeno natural</span>
                     </div>
-                    <a href="turismo-detalle.html?id=playa-de-las-palomitas" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=playa-de-las-palomitas" class="btn" data-track-id="turismo_playa-de-las-palomitas" data-title="Playa de las Palomitas" data-image="images/turismo/popcorn-beach.jpg">Más información</a>
                 </div>
             </article>
 
@@ -297,7 +297,7 @@
                     <div class="features">
                         <span><i class="fas fa-water"></i> Salinas</span>
                     </div>
-                    <a href="turismo-detalle.html?id=salinas-del-carmen" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=salinas-del-carmen" class="btn" data-track-id="turismo_salinas-del-carmen" data-title="Salinas del Carmen" data-image="images/turismo/Salinas-carmen.webp">Más información</a>
                 </div>
             </article>
 
@@ -309,7 +309,7 @@
                     <div class="features">
                         <span><i class="fas fa-compass"></i> Extremo norte</span>
                     </div>
-                    <a href="turismo-detalle.html?id=punta-de-pesebre" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=punta-de-pesebre" class="btn" data-track-id="turismo_punta-de-pesebre" data-title="Punta de Pesebre" data-image="images/turismo/punta-pesebre.jpg">Más información</a>
                 </div>
             </article>
         </div>
